# Contacts

./: README.md  com.github.aggalex.contacts.yml  com.github.itmm.contacts.yml  config.vala.in  meson.build  meson.build~
data/: com.github.Contacts.appdata.xml.in  com.github.Contacts.desktop.in.in  com.github.aggalex.contacts.appdata.xml.in  com.github.aggalex.contacts.desktop.in.in  com.github.itmm.contacts.appdata.xml.in  com.github.itmm.contacts.desktop.in.in  gresource.xml
data/css/: style.css  style.css~
debian/: changelog  com.github.aggalex.contacts.substvars  control  files  rules
debian/.debhelper/com.github.aggalex.contacts/: dbgsym-build-ids
debian/.debhelper/com.github.aggalex.contacts/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/com.github.aggalex.contacts/dbgsym-root/usr/share/doc/: com.github.aggalex.contacts-dbgsym
debian/com.github.aggalex.contacts/DEBIAN/: control  md5sums
debian/com.github.aggalex.contacts/usr/share/applications/: com.github.aggalex.contacts.desktop  com.github.aggalex.contacts.desktop.in
debian/com.github.aggalex.contacts/usr/share/contacts/css/: style.css
debian/com.github.aggalex.contacts/usr/share/locale/de/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/el/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/es/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/fr/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/it/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/ja/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/nl/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/tr/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/locale/uk/LC_MESSAGES/: com.github.aggalex.contacts.mo
debian/com.github.aggalex.contacts/usr/share/metainfo/: com.github.aggalex.contacts.appdata.xml
lib/: ValueAnimator.vala  ValueAnimator.vala~
lib/File/: FileHelper.vala
lib/Json/: JsonBuilder.vala  JsonParser.vala
lib/VCard/: VCardBuilder.vala  VCardParser.vala
po/: LINGUAS  POTFILES  README.MD  com.github.aggalex.contacts.pot  de.po  el.po  es.po  fr.po  it.po  ja.po  jp.po  nl.po  pt.po  pt_BR.po  ru.po  tr.po  uk.mo  uk.po
src/: Application  Application.vala  Application.vala~  DataTypes.vala  Tests.vala  compnrun.sh  run
src/DataHelper/: Address.vala  DataTypes.vala
src/FileHelper/: FileHelper.vala
src/FolksHelper/: FolksBuilder.vala  FolksLoader.vala
src/JsonHelper/: JsonBuilder.vala  JsonParser.vala
src/Model/: Contact.vala  ContactList.vala
src/QuotedPrintableHelper/: QuotedPrintableParser.vala
src/Utils/: .goutputstream-6ISI1Z  .goutputstream-EE3H1Z  Decoder  Decoder.vala  Replacer.vala  VCardTranslator.vala  test  test.vala  testmain.vala
src/VCardHelper/: VCardBuilder.vala  VCardParser.vala
src/View/: Contact.vala  Contact.vala~  ContactList.vala  ContactList.vala~  Css.vala  Headerbar.vala  Headerbar.vala~
src/View/Widgets/: EditableLabel.vala  EditableLabel.vala~  EditableLabelDate.vala  EditableLabelDate.vala~  EditableLabelNoType.vala  EditableLabelNoType.vala~  EditableLabelSegmented.vala  EditableLabelSegmented.vala~  EditableTitle.vala  EditableWidget.vala  EditableWidget.vala~  ErrorBar.vala  IconPopup.vala  InfoSection.vala  InfoSectionMisc.vala  InfoSectionMisc.vala~  InfoSectionSegmented.vala  LightStack.vala  Popover.vala  Sidebar.vala  SidebarRow.vala  SimpleMenu.vala
src/ViewModel/: ContactHandler.vala  ContactListHandler.vala
src/Widgets/: EditableLabelSegmented.vala  EditableWidget.vala  Popover.vala  SimpleMenu.vala
src/Window/: .~lock.ContactList.vala.bak#  Contact.vala  ContactList.vala
src/valacompiler/: valacompiler.options  valacompiler.test
src_bak/: ..bashrc.swp  Application.vala  Headerbar.vala
src_bak/Utils/: .goutputstream-IUKX1Z  Decoder  Decoder.vala  Mum.vcf  Remover.vala.old  VCardTranslator.vala  new.vcf  run
src_bak/Widgets/: EditableLabel.vala  EditableLabelDate.vala  EditableLabelNoType.vala  EditableLabelSegmented.vala  EditableTitle.vala  EditableWidget.vala  IconPopup.vala  InfoSection.vala  Sidebar.vala  SidebarRow.vala  SimpleMenu.vala
src_bak/Window/: Contact.vala  ContactList.vala
src_bak/css/: Css.vala  style.css
src_bak/valacompiler/: valacompiler.options  valacompiler.test
